--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="stylesheet.css">
     <script src="array.js" async></script>
-    <title>Document</title>
+    <title> Arrays</title>
 </head>
 <body>
     
